--- a/music-player-for-elementor/css/mpfe-front-style.css
+++ b/music-player-for-elementor/css/mpfe-front-style.css
@@ -565,11 +565,10 @@ i.compact-playpause {
 	color: #f6553c;
 	border-radius: 50%;
 	padding: 0 16px;
-	padding-left: 19px;
-	padding-right: 17px
+	width: 53px;
 }
 i.compact-playpause.compact_pause {
-	padding-left: 20px;
+	padding-left: 18px;
 	padding-right: 18px;
 }
 
